force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor Junction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>