force-app/main/default/objects/Competitor__c/fields/AccountCompetitorVisionDental__c.field-meta.xml
<CustomField>
    <fullName>AccountCompetitorVisionDental__c</fullName>
    <label>zz_Company Competitor (Vision/Dental)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>