force-app/main/default/objects/Competitor__c/fields/AssociatedMedicalCarrier__c.field-meta.xml
<CustomField>
    <fullName>AssociatedMedicalCarrier__c</fullName>
    <description>This field has been changed from LookUp to Text Area as multiple Medical Carriers to be allowed to select for a Competitor.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Associated Medical Carrier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>