force-app/main/default/objects/Competitor__c/fields/Business_Model_for_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Business_Model_for_Pharmacy__c</fullName>
    <description>Populating the &quot;Pharmacy Business Model&quot; picklist value from Company</description>
    <formula>IF(ISPICKVAL(Competitorclassification__c, &apos;Pharmacy&apos;),
 TEXT(Account__r.PharmacyBusinessModel__c), 
 null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rx Business Model</label>
    <type>Text</type>
</CustomField>