force-app/main/default/objects/Competitor__c/fields/BusinessModelforPharmacy__c.field-meta.xml
<CustomField>
    <fullName>BusinessModelforPharmacy__c</fullName>
    <label>zz Business Model for Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carve In</fullName>
            </value>
            <value>
                <fullName>Carve Out</fullName>
            </value>
            <value>
                <fullName>Carve Out Flex / Cross Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>