force-app/main/default/objects/Competitor__c/fields/Coalition_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Coalition_if_applicable__c</fullName>
    <label>Coalition (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aon</fullName>
            </value>
            <value>
                <fullName>CoreTrust</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>Mercer</fullName>
            </value>
            <value>
                <fullName>WTW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>