force-app/main/default/objects/Competitor__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>