force-app/main/default/objects/Competitor__c/fields/Competitor_Group__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Group__c</fullName>
    <description>This Formula gets the related Competitor Account, Competitor Group value.</description>
    <formula>TEXT(CompetitorAccount__r.CompetitorGroup__c)</formula>
    <label>Competitor Group</label>
    <type>Text</type>
</CustomField>