force-app/main/default/objects/Competitor__c/fields/CompetitorAccount__c.field-meta.xml
<CustomField>
    <fullName>CompetitorAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Junction (Competitor Account)</relationshipLabel>
    <relationshipName>Competitor_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>