force-app/main/default/objects/Competitor__c/fields/CompetitorAccountRowId__c.field-meta.xml
<CustomField>
    <fullName>CompetitorAccountRowId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Account  Row Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>