force-app/main/default/objects/Competitor__c/fields/EPOMembers__c.field-meta.xml
<CustomField>
    <fullName>EPOMembers__c</fullName>
    <label>EPO Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>