force-app/main/default/objects/Competitor__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <description>Populating the values from Company Fields based on Competitor classification Field From Competitor Object</description>
    <formula>IF(ISPICKVAL(Competitorclassification__c, &apos;Dental&apos;),  TEXT(Account__r.DentalFundingType__c), 
  IF(ISPICKVAL(Competitorclassification__c, &apos;Vision&apos;), TEXT(Account__r.VisionFundingType__c),
  null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Type</label>
    <type>Text</type>
</CustomField>