force-app/main/default/objects/Competitor__c/fields/HMOMembers__c.field-meta.xml
<CustomField>
    <fullName>HMOMembers__c</fullName>
    <label>HMO Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>