force-app/main/default/objects/Competitor__c/fields/Inactive_Competitor_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Competitor_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inactive Competitor Date</label>
    <type>Date</type>
</CustomField>