force-app/main/default/objects/Competitor__c/fields/Inactive_Competitor_Status__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Competitor_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Competitor Status</label>
    <type>Checkbox</type>
</CustomField>