force-app/main/default/objects/Competitor__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incumbent</label>
    <type>Checkbox</type>
</CustomField>