force-app/main/default/objects/Competitor__c/fields/MembershipEstimate__c.field-meta.xml
<CustomField>
    <fullName>MembershipEstimate__c</fullName>
    <label>Participating Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>