force-app/main/default/objects/Competitor__c/fields/MembersinOtherMedicalProducts__c.field-meta.xml
<CustomField>
    <fullName>MembersinOtherMedicalProducts__c</fullName>
    <label>Members in Other Medical Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>