force-app/main/default/objects/Competitor__c/fields/NumberOfMembersHeld__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMembersHeld__c</fullName>
    <label>Number Of Members Held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>