force-app/main/default/objects/Competitor__c/fields/ofMembersHeld__c.field-meta.xml
<CustomField>
    <fullName>ofMembersHeld__c</fullName>
    <label>% of Members Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>