force-app/main/default/objects/Competitor__c/fields/OtherPrdctCompetitorRecordTobeDeleted__c.field-meta.xml
<CustomField>
    <fullName>OtherPrdctCompetitorRecordTobeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzOtherPrdctCompetitorRecordTobeDeleted</label>
    <type>Checkbox</type>
</CustomField>