force-app/main/default/objects/Competitor__c/fields/ParticipatingActives__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingActives__c</fullName>
    <label>Participating Actives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>