force-app/main/default/objects/Competitor__c/fields/ParticipatingBargainedFullTimeActive__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingBargainedFullTimeActive__c</fullName>
    <label>Participating Bargained FullTime Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>