force-app/main/default/objects/Competitor__c/fields/ParticipatingMembers__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingMembers__c</fullName>
    <label>zz_Participating Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>