force-app/main/default/objects/Competitor__c/fields/ParticipatingNonBargainedFullTimeAc__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingNonBargainedFullTimeAc__c</fullName>
    <label>Participating NonBargain FullTime Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>