force-app/main/default/objects/Competitor__c/fields/ParticipatingO65Retirees__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingO65Retirees__c</fullName>
    <label>Participating O65 Retirees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>