force-app/main/default/objects/Competitor__c/fields/ParticipatingPartTimeActives__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingPartTimeActives__c</fullName>
    <label>Participating Part-Time Actives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>