force-app/main/default/objects/Competitor__c/fields/POSMembers__c.field-meta.xml
<CustomField>
    <fullName>POSMembers__c</fullName>
    <label>POS Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>