force-app/main/default/objects/Competitor__c/fields/PPOMembers__c.field-meta.xml
<CustomField>
    <fullName>PPOMembers__c</fullName>
    <label>PPO Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>