force-app/main/default/objects/Competitor__c/fields/PrimaryIncumbent__c.field-meta.xml
<CustomField>
    <fullName>PrimaryIncumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Incumbent</label>
    <type>Checkbox</type>
</CustomField>