force-app/main/default/objects/Competitor__c/fields/SecondaryIncumbent__c.field-meta.xml
<CustomField>
    <fullName>SecondaryIncumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Incumbent</label>
    <type>Checkbox</type>
</CustomField>