force-app/main/default/objects/Competitor__c/fields/Special_MyUhc_com_Customization_column__c.field-meta.xml
<CustomField>
    <fullName>Special_MyUhc_com_Customization_column__c</fullName>
    <label>Special MyUhc.com Customization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (see notes)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>