force-app/main/default/objects/Competitor__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strength</label>
    <type>TextArea</type>
</CustomField>