force-app/main/default/objects/Competitor__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>