force-app/main/default/objects/Competitor__c/fields/Type_of_File__c.field-meta.xml
<CustomField>
    <fullName>Type_of_File__c</fullName>
    <label>Set Up/Data Exchanges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accumulator File</fullName>
            </value>
            <value>
                <fullName>Ad hoc File (see notes)</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>Daily Claim File (CDD)</fullName>
            </value>
            <value>
                <fullName>Incoming File (see notes)</fullName>
            </value>
            <value>
                <fullName>Manual File</fullName>
            </value>
            <value>
                <fullName>Outgoing Optum Clinical File</fullName>
            </value>
            <value>
                <fullName>TOPS/Front End SPI</fullName>
            </value>
            <value>
                <fullName>Utilization Management File</fullName>
            </value>
            <value>
                <fullName>Other (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Ad Hoc File</fullName>
                <isActive>false</isActive>
                <label>Ad Hoc File</label>
            </value>
            <value>
                <fullName>Incoming File</fullName>
                <isActive>false</isActive>
                <label>Incoming File</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>