force-app/main/default/objects/Competitor__c/fields/Type_of_Products_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Products_Services_Provided__c</fullName>
    <label>Type of Products\Services Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k) Administrator</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Banking-Commuter</fullName>
            </value>
            <value>
                <fullName>Banking-FSA</fullName>
            </value>
            <value>
                <fullName>Banking-HRA</fullName>
            </value>
            <value>
                <fullName>Banking-HSA</fullName>
            </value>
            <value>
                <fullName>Behavioral Health (incl. Eating Disorders)</fullName>
            </value>
            <value>
                <fullName>Benefit Administration/Enrollment</fullName>
            </value>
            <value>
                <fullName>Cancer Management</fullName>
            </value>
            <value>
                <fullName>Caregiver/Child/Family Care Support</fullName>
            </value>
            <value>
                <fullName>Care Management</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
            <value>
                <fullName>Data Aggregator</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Disease Management (Diabetes/Kidney/Heart)</fullName>
            </value>
            <value>
                <fullName>EAP-Domestic</fullName>
            </value>
            <value>
                <fullName>EAP-International</fullName>
            </value>
            <value>
                <fullName>Expatriates</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Home Health (primary or chronic care mgmt)</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Musculoskeletal</fullName>
            </value>
            <value>
                <fullName>Network (COEs, ACOs, OON mgmt)</fullName>
            </value>
            <value>
                <fullName>Nurseline</fullName>
            </value>
            <value>
                <fullName>Onsite Clinics</fullName>
            </value>
            <value>
                <fullName>Pet Insurance</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>