force-app/main/default/objects/Competitor__c/fields/TypesofOtherProductsServicesProvide__c.field-meta.xml
<CustomField>
    <fullName>TypesofOtherProductsServicesProvide__c</fullName>
    <label>zzTypes of OtherProducts\ServicesProvide</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k) Administrator</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Benefit Administration/Enrollment</fullName>
            </value>
            <value>
                <fullName>Care Management</fullName>
            </value>
            <value>
                <fullName>Concierge Vendor</fullName>
            </value>
            <value>
                <fullName>Data Aggregator</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Disease Management</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>Expatriates</fullName>
            </value>
            <value>
                <fullName>Financial Protection Products (APP\CI\HI)</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Health Risk Assessment</fullName>
            </value>
            <value>
                <fullName>International Pooling</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Health-Maternity</fullName>
            </value>
            <value>
                <fullName>Onsite Clinics</fullName>
            </value>
            <value>
                <fullName>Platform Vendors</fullName>
            </value>
            <value>
                <fullName>Rewards/Incentives Program</fullName>
            </value>
            <value>
                <fullName>Stop Loss</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>Transparency</fullName>
            </value>
            <value>
                <fullName>Web Portal</fullName>
            </value>
            <value>
                <fullName>Wellness/Wellbeing (fitness, sleep, nutrition/weight mgmt, coaching)</fullName>
            </value>
            <value>
                <fullName>Banking-HSA</fullName>
            </value>
            <value>
                <fullName>EAP-Domestic</fullName>
            </value>
            <value>
                <fullName>Telehealth-Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>