force-app/main/default/objects/Competitor__c/fields/zzAssociatedMedicalCarrier__c.field-meta.xml
<CustomField>
    <fullName>zzAssociatedMedicalCarrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zz Associated Medical Carrier</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitor Junction</relationshipLabel>
    <relationshipName>Competitor_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>