force-app/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CASESAFEID__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CompetitorAccount__c</columns>
    <columns>Competitorclassification__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>PrimaryIncumbent__c</columns>
    <columns>SecondaryIncumbent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>test companys</value>
    </filters>
    <label>All</label>
</ListView>