force-app/main/default/objects/Competitor__c/listViews/Competitor_Exceptions.listView-meta.xml
<ListView>
    <fullName>Competitor_Exceptions</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Competitor Exceptions</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>