force-app/main/default/objects/Competitor__c/listViews/Michele_Validations.listView-meta.xml
<ListView>
    <fullName>Michele_Validations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountCompetitorVisionDental__c</columns>
    <columns>CompetitorAccount__c</columns>
    <columns>Competitorclassification__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>Type_of_Products_Services_Provided__c</columns>
    <columns>OtherPrdctCompetitorRecordTobeDeleted__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Business_Model_for_Pharmacy__c</columns>
    <columns>ParticipatingMembers__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Test Account CM Merit Team</value>
    </filters>
    <label>Michele Validations</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>